--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+MouseInfo==0.1.3
 mycdp==1.2.0
 nest-asyncio==1.6.0
 outcome==1.3.0.post0
@@ -34,7 +35,10 @@ Pygments==2.19.2
 pymongo==4.13.2
 pynose==1.5.4
 pyotp==2.9.0
+pyperclip==1.9.0
 pyreadline3==3.5.4
+PyRect==0.2.0
+PyScreeze==1.0.1
 PySocks==1.7.1
 pytest==8.4.1
 pytest-html==4.0.2
