--- a/configs.yml
+++ b/configs.yml
@@ -1,9 +1,13 @@
 searches:
   indeed:
-    - job: desenvolvedor java
-      locations: ["Rio de Janeiro, RJ", "Remoto"]
     - job: java
-      locations: ["Rio de Janeiro, RJ", "Remoto"]
+      locations: ["Rio de Janeiro, RJ"]
+    - job: programador junior
+      locations: ["Rio de Janeiro, RJ"]
+    - job: desenvolvedor junior
+      locations: ["Rio de Janeiro, RJ"]
+    # - job: assistente administrativo
+    #   locations: ["Rio de Janeiro, RJ"]
   infojob:
     - job: desenvolvedor java
       locations: ["Rio de Janeiro - RJ"]
@@ -13,9 +17,9 @@ searches:
 filters:
   - key: title
     exclude:
-      - programming_languages: ["delphi", "c", "c#", "c++", "php", "golang", "go", "swift", "kotlin"]
+      - programming_languages: ["delphi", "c", "c#", "c++", "net", "php", "golang", "go", "swift", "kotlin"]
       - seniorities: ["pleno", "senior", "pl", "sr", "especialista", "specialist", "mid", "midlevel", "ii", "iii", "ll", "lll"]
-      - positions: ["lead", "architect", "arquiteto", "mobile", "seguranca", "principal", "qa", "staff", "diretor", "gerente", "manager"]
+      - positions: ["lead", "lider", "architect", "arquiteto", "mobile", "seguranca", "principal", "qa", "staff", "diretor", "gerente", "manager"]
       - so: ["android", "ios"]
   - key: description
     exclude:
@@ -24,7 +28,8 @@ filters:
   - key: description
     full_match: false
     include:
-      - programming_languages: ["java", "spring", "javascript", "typescript", "python"]
+      - programming_languages: ["java", "spring", "javascript", "typescript", "python", "node", "nodejs"]
+      # - others: ["ms office", "pacote office", "excel", "planilha", "planilhas", "informatica", "correio", "correios", "linguagem de programacao"]
   - key: company
     exclude:
       - companies: ["netvagas", "bairesdev"]
